another panel z-index fix

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -2007,6 +2007,19 @@ h1,h2,h3,h4,p,ul {
     font-weight: 400;
     line-height: 28px;
     color: #666666;
+    width: ~'calc(100% - 130px)';
+    min-width: ~'calc(100% - 130px)';
+
+    @media @mobiles {
+      width: ~'calc(100% - 100px)';
+      min-width: ~'calc(100% - 100px)';
+    }
+
+    @media @tablet {
+      width: ~'calc(100% - 110px)';
+      min-width: ~'calc(100% - 110px)';
+    }
+
   }
 
   &__text {
@@ -3341,7 +3354,8 @@ h1,h2,h3,h4,p,ul {
 }
 
 .alert {
-  
+  will-change: transform;
+  transition: all 0.3s ease;
   top: 0;
   width: 100%;
   height: 35px;
@@ -3402,6 +3416,9 @@ h1,h2,h3,h4,p,ul {
 
 .slideout-menu {
   z-index: -1;
+}
+.slideout-open .slideout-menu {
+  z-index: 1;
 }
 
 
